[tool.poetry]
name = "osv-vuln-bot"
version = "0.1.0"
description = "Automated OSV vulnerability scanner and future PR opener prioritized by severity."
authors = ["CoderDeltaLAN <coderdeltalan.cargo784@8alias.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "osv_vuln_bot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^7.0.0"
ruff = "^0.5.6"
black = "^25.1.0"
mypy = "^1.10.0"
types-requests = "^2.31.0.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["osv_vuln_bot"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.poetry.scripts]
osv-vuln-bot = "osv_vuln_bot.cli:entrypoint"
